# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${PROJECT_BINARY_DIR}/include
  ${PROJECT_SOURCE_DIR}/ym-common/include
  ${PROJECT_SOURCE_DIR}/ym-base/include
  ${PROJECT_SOURCE_DIR}/ym-logic/include
  include
  private_include
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( c++-srcs )

if ( Python3_FOUND )
  add_subdirectory ( py_ymcell )
endif ( Python3_FOUND )
add_subdirectory ( tests )


# ===================================================================
#  ターゲットの設定
# ===================================================================

# ===================================================================
#  インストールターゲットの設定
# ===================================================================
