# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
set (cgmgr_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/CgMgr.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/CgSignature.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/CgSigRep.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/PatMgr.cc
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================



# ===================================================================
#  インストールターゲットの設定
# ===================================================================
