# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
set (mislib_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/MislibNode.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MislibParser.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MislibScanner.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MislibConv.cc

  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
